Mudança no E-mail

--- a/templates/viagens/html/contato.html
+++ b/templates/viagens/html/contato.html
@@ -39,7 +39,7 @@
         <div class="d-flex align-items-center mb-3">
           <span class="fs-5 me-2">📧</span>
           <p class="mb-0">
-            <a href="mailto:contato@desperteviagens.com" class="text-decoration-none text-dark contato-link">contato@desperteviagens.com</a>
+            <a href="mailto:desperteviagens@gmail.com" class="text-decoration-none text-dark contato-link">contato@desperteviagens.com</a>
           </p>
         </div>
 
