--- a/templates/viagens/html/menu.html
+++ b/templates/viagens/html/menu.html
@@ -55,7 +55,7 @@
     "addressCountry": "BR"
   },
   "telephone": "+55 51 99745-2112",
-  "email": "contato@desperteviagens.com.br",
+  "email": "desperteviagens@gmail.com",
   "openingHours": "Mo-Fr 08:00-18:00",
   "sameAs": [
     "https://www.instagram.com/desperteviagens",
