--- a/templates/viagens/html/rodape.html
+++ b/templates/viagens/html/rodape.html
@@ -34,7 +34,7 @@
 
   <div class="d-flex align-items-center mb-2">
     <span class="me-2 fs-5">📧</span>
-    <a href="mailto:desperte@desperteviagens.com.br" class="text-light text-decoration-none contato-link">contato@desperteviagens.com</a>
+    <a href="mailto:desperteviagens@gmail.com" class="text-light text-decoration-none contato-link">contato@desperteviagens.com</a>
   </div>
 
   <div class="d-flex align-items-center">
