--- a/templates/viagens/painel/clientes.html
+++ b/templates/viagens/painel/clientes.html
@@ -3,7 +3,15 @@
 
 {% block content %}
   <h2 class="mb-4"><i class="fas fa-users me-2"></i>Clientes Cadastrados</h2>
-    <form method="get" class="mb-4 row g-3 align-items-end">
+  <a href="{% url 'painel:exportar_clientes_excel' %}" class="btn btn-success mb-3 ms-2">
+  📊 Exportar Excel
+  </a>
+
+  <a href="{% url 'painel:exportar_clientes_pdf' %}" class="btn btn-danger mb-3">
+  📄 Exportar PDF
+  </a>
+
+  <form method="get" class="mb-4 row g-3 align-items-end">
   <div class="col-md-6">
     <label for="busca">Buscar por nome ou CPF</label>
     <input type="text" name="busca" id="busca" class="form-control" value="{{ busca|default_if_none:''  }}">
