--- a/templates/viagens/html/depoimentos.html
+++ b/templates/viagens/html/depoimentos.html
@@ -11,32 +11,77 @@
 <div class="container py-5">
   <h2 class="text-center text-primary mb-5" data-aos="fade-down">O que dizem nossos viajantes</h2>
 
-  <div class="row g-4">
-    <!-- Depoimento 1 -->
-    <div class="col-md-6" data-aos="fade-right">
-      <div class="card shadow h-100">
-        <div class="card-body">
-          <p class="card-text">
-            Foi tudo incrível. Muito bom viajar com vocês. Agradeço pela organização, pelo acompanhamento e por nos deixar sempre tranquilos desde o planejamento até o retorno.
-          </p>
-          <h5 class="card-title text-end mt-3"><em>– Paulo Jardel Andres</em></h5>
+  <div class="col">
+      <div class="card h-100 shadow text-center">
+        <img src="{% static 'images/viagens_clientes/claudia_sergio.png' %}" class="card-img-top"  style="height: 400px; width: 400px; object-fit: cover; border-radius: 10px; align-self: center;">
+        <div class="card-body mx-auto mt-3">
+          <h5 class="card-title" style="font-size: 23px;">VIAGEM A NATAL - Claudia e Sergio</h5>
+          <p class="card-text text-muted" style="font-size: 17px;">O atendimento de vcs foi sempre impecável e esclarecedor, o hotel maravilhoso, limpo, café da manhã super variado, atendimento acolhedor, localização perfeita. Muito bom, tuuudo perfeito!</p>
         </div>
       </div>
     </div>
-
-    <!-- Depoimento 2 -->
-    <div class="col-md-6" data-aos="fade-left">
-      <div class="card shadow h-100">
+    <br>
+    <div class="col">
+      <div class="card h-100 shadow text-center">
+        <img src="{% static 'images/viagens_clientes/taina_arthur.png' %}" class="card-img-top"  style="height: 400px; width: 400px; object-fit: cover; border-radius: 10px; align-self: center;">
         <div class="card-body">
-          <p class="card-text">
-            Obrigada pela dedicação, compromisso e responsabilidade. Ótimas profissionais! Adoramos viajar com vocês.
-          </p>
-          <h5 class="card-title text-end mt-3"><em>– Silvia</em></h5>
+          <h5 class="card-title" style="font-size: 23px;">VIAGEM A LISBOA - Tainá e Arthur</h5>
+          <p class="card-text text-muted" style="font-size: 17px;">Tu estavas sempre junto, já pronta para nos auxiliar se preciso, e isso importa bastante! Foi tudo incrível, não queríamos voltar para casa mais!</p>
         </div>
       </div>
     </div>
-  </div>
-</div>
+    <br>
+    <div class="col">
+      <div class="card h-100 shadow text-center">
+        <img src="{% static 'images/viagens_clientes/dione.png' %}" class="card-img-top"  style="height: 400px; width: 400px; object-fit: cover; border-radius: 10px; align-self: center;">
+        <div class="card-body">
+          <h5 class="card-title" style="font-size: 23px;">VIAGEM A PORTO SEGURO - Dione (viajante solo)</h5>
+          <p class="card-text text-muted" style="font-size: 17px;">Um agradecimento especial a minha super amiga Jé, que graças a tua curadoria tudo se tornou possível. Obrigada por ter sido impecável em cada passo que eu dei, desde o destino, o hotel (pousada), fofíssimo, que fez com que eu me sentisse em casa desde o primeiro minuto. Obrigada pelo carinho comigo e todo teu profissionalismo. ✨
+Sou team Desperte 🧡</p>
+        </div>
+      </div>
+    </div>
+    <br>
+    <div class="col">
+      <div class="card h-100 shadow text-center">
+        <img src="{% static 'images/viagens_clientes/cleusa_luisa.png' %}" class="card-img-top"  style="height: 400px; width: 400px; object-fit: cover; border-radius: 10px; align-self: center;">
+        <div class="card-body">
+          <h5 class="card-title" style="font-size: 23px;">EUROTRIP --> FRANKFURT, AMSTERDAM E PARIS - Cleusa e Luísa</h5>
+          <p class="card-text text-muted" style="font-size: 17px;">A gente agradece muito toda a ajuda de vocês! foi muito essencial, só pela próxima</p>
+        </div>
+      </div>
+    </div>
+    <br>
+    <div class="col">
+      <div class="card h-100 shadow text-center">
+        <img src="{% static 'images/viagens_clientes/ana_guilherme.png' %}" class="card-img-top"  style="height: 400px; width: 400px; object-fit: cover; border-radius: 10px; align-self: center;">
+        <div class="card-body">
+          <h5 class="card-title" style="font-size: 23px;">VIAGEM A PORTO DE GALINHAS - Ana Julia, Guilherme e Francisco</h5>
+          <p class="card-text text-muted" style="font-size: 17px;">O atendimento de vocês foi impecável do início ao fim. O que eu mais valorizo em um negócio é a agilidade, a rapidez e a prestatividade e vocês entregaram tudo isso com excelência. Todo o processo foi muito tranquilo, sem nenhum contratempo. A preocupação em nos atender da melhor forma ficou evidente em cada detalhe. Estão de parabéns pelo profissionalismo, comprometimento e pela experiência que proporcionaram!</p>
+        </div>
+      </div>
+    </div>
+    <br>
+    <div class="col">
+      <div class="card h-100 shadow text-center">
+        <img src="{% static 'images/viagens_clientes/eliane_lucas.png' %}" class="card-img-top"  style="height: 400px; width: 400px; object-fit: cover; border-radius: 10px; align-self: center;">
+        <div class="card-body">
+          <h5 class="card-title" style="font-size: 23px;">VIAGEM A SANTIAGO DO CHILE - Eliane e Lucas</h5>
+          <p class="card-text text-muted" style="font-size: 17px;">Queria te agradecer por toda organização, suporte e preocupação, antes, durante e após a viagem, certeza que nossas próximas viagens serão com vocês! O hotel em que ficamos hospedados era muito bom, em um bairro tranquilo e silencioso, com um café da manhã delicioso!</p>
+        </div>
+      </div>
+    </div>
+    <br>
+    <div class="col">
+      <div class="card h-100 shadow text-center">
+        <img src="{% static 'images/viagens_clientes/jenifer_gabriel.png' %}" class="card-img-top"  style="height: 400px; width: 400px; object-fit: cover; border-radius: 10px; align-self: center;">
+        <div class="card-body">
+          <h5 class="card-title" style="font-size: 23px;">VIAGEM AO RIO DE JANEIRO - Jheniffer e Gabriel</h5>
+          <p class="card-text text-muted" style="font-size: 17px;">Sobre o serviço de vocês 
+Nos sentimos muito bem assessorados e seguros! Foi uma ótima escolha contar com vcs!</p>
+        </div>
+      </div>
+    </div>
 {% endblock %}
 
 {% block scripts_extra %}
