Mudanças em textos

--- a/templates/viagens/html/home.html
+++ b/templates/viagens/html/home.html
@@ -56,31 +56,28 @@
         <img src="{% static 'images/machu.jpg' %}" class="carousel-img d-block w-100 rounded shadow" alt="Machu Picchu">
         <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2">
           <h5>Machu Picchu, Peru</h5>
-          <p>Descubra os mistérios dos Andes em uma aventura inesquecível.</p>
+          
         </div>
       </div>
 
       <div class="carousel-item">
         <img src="{% static 'images/cartagena.png' %}" class="carousel-img d-block w-100 rounded shadow" alt="Gramado">
         <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2">
-          <h5>CARTAGENA DAS INDIAS</h5>
-          <p>Romance e gastronomia no coração da Serra Gaúcha.</p>
+          <h5>Cartagena Das Indias</h5>
         </div>
       </div>
 
       <div class="carousel-item">
         <img src="{% static 'images/ushuai.png' %}" class="carousel-img d-block w-100 rounded shadow" alt="Maldivas">
         <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2">
-          <h5>USHUAIA</h5>
-          <p>Relaxe em águas cristalinas com bangalôs de luxo sobre o mar.</p>
+          <h5>Ushuaia</h5>
         </div>
       </div>
       
       <div class="carousel-item">
         <img src="{% static 'images/lencois.png' %}" class="carousel-img d-block w-100 rounded shadow" alt="Maldivas">
         <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2">
-          <h5>LENÇOIS MARANHENSES</h5>
-          <p>Relaxe em águas cristalinas com bangalôs de luxo sobre o mar.</p>
+          <h5>Lençois Maranhanses</h5>
         </div>
       </div>
 
