--- a/templates/viagens/html/sobre_nos.html
+++ b/templates/viagens/html/sobre_nos.html
@@ -7,19 +7,14 @@
 <section class="container py-5">
   <h1 class="text-center text-primary mb-5">Tudo sobre nós</h1>
 
-  <p class="lead text-center">
-    Soluções para os seus maiores sonhos
-  </p>
 
-  <p class="text-center">
-    Na Desperte Viagens, nossa prioridade é a satisfação completa do cliente.<br>
-    Iniciamos nossas atividades em Lajeado, em 2019. Com ampla experiência, conhecimento e contatos de longa data,<br>
-    trabalhamos para que cada experiência de viagem supere as altas expectativas dos clientes.
-  </p>
 
-  <p class="text-center mt-4">
-    Seja qual for o tipo de viagem em que você está pensando, saiba que nós temos expertise para<br>
-    planejá-la com facilidade. Então, conte conosco para organizar a SUA viagem.
-  </p>
+  <p class="text-center mb-4 " style="font-size: 20px;" >
+Na Desperte, acreditamos que uma viagem vai muito além de conhecer um novo destino ela tem o poder de transformar.
+ <br>Por isso, planejamos cada roteiro com o cuidado e expertise de quem entende que cada viagem é única!  </p>
+  <p class="text-center mb-4" style="font-size: 20px;">
+    Somos especialistas em criar experiências personalizadas, do jeitinho que você sonha e precisa.<br> Mais do que vender viagens, nossa missão é guiar você em uma jornada leve, segura e memorável.</p>
+  <p class="text-center mt-4" style="font-size: 20px;">
+Cuidamos de cada detalhe para que sua única preocupação seja viver intensamente cada momento.<br> Seja sua primeira viagem ou a realização de um grande sonho, você pode confiar: aqui, a gente faz com o coração e com muita bagagem no assunto, afinal estamos desde 2019 no mercado, com +200 embarques realizados!  </p>
 </section>
 {% endblock %}
