--- a/templates/viagens/html/home.html
+++ b/templates/viagens/html/home.html
@@ -21,22 +21,35 @@
 <style>
       
   </style>
-<!-- Seção principal -->
 <div class="container py-5 d-flex justify-content-center align-items-center" style="min-height: 80vh;">
   <div class="row align-items-center w-100">
-    <div class="container py-5 text-center" data-aos="fade-down">
+    <div class="container py-5 text-center" data-aos="fade-down" 
+         style="
+           background-color: white; 
+           padding: 2rem; 
+           border-radius: 0.5rem;
+           max-width: 600px;
+           margin: 0 auto;
+         ">
       <h1 class="text-primary fw-bold mb-3" 
-          style="text-shadow: 4px 4px 12px rgba(0, 0, 0, 0.9);-webkit-text-stroke: 0.5px rgba(242, 141, 10, 0.45);">
+          style="
+            text-shadow: none;
+            -webkit-text-stroke: none;
+          ">
         REALIZE COM A DESPERTE
       </h1>
-     <p class="lead" style="
-  font-size: 1.7rem;
-  font-weight: 700;
-  
-  text-shadow: 2px 2px 4px #000, -1px -1px 4px #000;
-">
-  A viagem dos seus sonhos começa aqui. Roteiros sob medida, atendimento personalizado e experiências inesquecíveis.
-</p>
+      <p class="lead" style="
+          font-size: 1.7rem;
+          font-weight: 700;
+          text-shadow: none;
+        ">
+        A viagem dos seus sonhos começa aqui. Roteiros sob medida, atendimento personalizado e experiências inesquecíveis.
+      </p>
+
+
+
+
+
       <a href="{% url 'cotacao' %}" class="btn btn-success mt-3">Solicitar Orçamento</a>
     </div>
   </div>
