--- a/templates/viagens/html/rodape.html
+++ b/templates/viagens/html/rodape.html
@@ -91,9 +91,14 @@
 
     </div>
 
-    <div class="text-center mt-3 small">
-        &copy; {% now "Y" %} Desperte Viagens. Todos os direitos reservados.
-    </div>
+    <div class="text-center mt-3 small" >
+        
+         Segunda a Sexta: 08:00 as 18:00 <br>
+         Sábado: 09:00 as 14:00 <br>
+         CNPJ 34.310.258/0001-06 <br>
+        &copy; {% now "Y" %} Desperte Agencia de Viagens LTDA. Todos os direitos reservados. 
+        
+      </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
